# gh-aw-python-project

.github/aw/: actions-lock.json
.github/workflows/: agentics-maintenance.yml  daily-team-status.lock.yml  daily-team-status.md  python-format-typecheck.lock.yml  python-format-typecheck.md  test-copilot-minimal.lock.yml  test-copilot-minimal.md  triage-issues.lock.yml  triage-issues.md
hello-lib/: .gitignore  README.md  pyproject.toml
hello-lib/.github/workflows/: ci.yml
hello-lib/src/hello_lib/: __init__.py  greeter.py
hello-lib/tests/: __init__.py  test_greeter.py
